--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
-    "token":"tokeninizi yazın",
-    "botsahip":"idnizi yazın",
-    "mongodb":""
+    "botsahip":"846736343593779230",
+    "mongodb":"mongodb+srv://SevBEni:Mustafa-a9153@cluster0.hscjj.mongodb.net/?retryWrites=true&w=majority"
 }
