--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+    "token" : "MTAwOTQ2NTEyNTEwODk3Nzc1NA.GgysoM.Tfm_PRCxSmtDeR0m_GBIA-yYiktFzi_YrLh63M",
     "botsahip":"846736343593779230",
     "mongodb":"mongodb+srv://SevBEni:Mustafa-a9153@cluster0.hscjj.mongodb.net/?retryWrites=true&w=majority"
 }
